# web_client_lib

./: .clang-format  CMakeLists.txt  LICENSE-MIT  README.md
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: webClient.hpp
lib/src/: webClient.cpp
